AVFVideoSinkInterface: do not release texture cache too early

When unloading camera, video sink clears texture cache, but QRhiMetal
can still try using textures owned by the cache, with a (now) dangling
pointer as a result and giving crashes that's hard to understand at first.
Another potential crash can be triggered by Metal API validation,
if it's enabled. To fix this, we make darwin plugin more like ffmpeg
plugin - the cache is retained by something that needs it - AVFVideoBuffer
objects. We can use native mechanics of ref-counting.

Pick-to: 6.6 6.5
Fixes: QTBUG-120465
Change-Id: I0d05c9bb876173b40f18eb278069cbb8e3eaf1c6
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit cb8f812e6cc6cab374075fdd81b5d6f5f40e8a40)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>